# message-stream-intent-classifier

./: .env.example  .gitignore  Dockerfile  Ensure the mock setup properly triggers `mock_ws.recv()  Example Fix for `test_match_conversation_updates_active_conversations  README.md  build_and_run.sh  client.py  pyproject.toml
In `src/: async_client.py`, update the sleep call
notebooks/: bert_model.ipynb  disentanglement_using_llms.ipynb  llm_baseling_model.ipynb  synthetic_data_generation.ipynb  synthetic_data_to_train_test_split.ipynb
notes/: inital_thoughts.md  research.md  synthetic_data.md  the_data.md  udnerstanding_what_I_need_to_build.md
scripts/: synthetic_data_generation.py
src/: async_client.py  calendar_event_classifier.py  client.py  datatypes.py  text_utils.py
src/conversations/: disentanglement_classifier.py  disentanglement_last_six_approach.py  disentanglement_llm_based_classifier.py  disentanglement_rule_based_classifier.py  disentangler.py  distentanglement_llm_based_classifier.py  extract_date_time_llm_model.py  ops.py
src/conversations/disentanglement/: last_six_approach.py  rule_based_classifier.py
src/pipeline/: async_client.py
tests/: scenario.py  test_async_client.py  test_client.py  test_e2e_client.py  test_text_utils.py
tests/conversations/: test_combined_disentanglment_classifier.py  test_disentaglement_classifier.py  test_ops.py
tests/pipeline/: test_async_client.py
tests/scenarios/: different_intent.json  first_message.json  first_message_label_0.json  second_message_same_user.json  timeout_convo.json  two_exisitng_conversations.json
