[project]
name = "message-stream-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
